--- a/src/app/pages/home/modules/activos/modificacion-activo/modificacion-activo.component.html
+++ b/src/app/pages/home/modules/activos/modificacion-activo/modificacion-activo.component.html
@@ -61,9 +61,9 @@
 						formControlName="observations"
 						placeholder="Observaciones..."
 					></textarea>
+					<mat-hint align="start"><strong>(Opcional)</strong> </mat-hint>
 				</mat-form-field>
-				<p class="detail__options">(Opcional)</p>
-
+				<br />
 				<br />
 				<mat-dialog-actions>
 					<button type="button" mat-stroked-button class="buttons__stepper" matStepperPrevious>Anterior</button>
