--- a/src/app/pages/home/modules/disminucion/nueva-disminucion-individual/nueva-disminucion-individual.component.sass
+++ b/src/app/pages/home/modules/disminucion/nueva-disminucion-individual/nueva-disminucion-individual.component.sass
@@ -16,9 +16,9 @@
     box-shadow: 1px 1px $purple
     background-color: $primary-purple
 .title__options
-    font-size: initial
-    color: $dark-purple
+    font-size: 12px
+    color:$dark-purple
 .subtitle__options
-    font-size: large
-    color: $primary
+    font-size: 14px
+    color:$primary  
     font-weight: 500
