--- a/src/app/pages/home/modules/incremento/nuevo-incremento-individual/nuevo-incremento-individual.component.html
+++ b/src/app/pages/home/modules/incremento/nuevo-incremento-individual/nuevo-incremento-individual.component.html
@@ -47,7 +47,9 @@
 					<mat-form-field appearance="outline" style="width: 24%">
 						<mat-label>Observaciones</mat-label>
 						<input matInput type="text" formControlName="notes" placeholder="Escribe algo" />
+						<mat-hint align="start"><strong>(Opcional)</strong> </mat-hint>
 					</mat-form-field>
+					<br />
 					<br />
 					<mat-dialog-actions>
 						<button type="button" mat-stroked-button class="buttons__stepper" matStepperPrevious>Anterior</button>
