--- a/src/app/pages/home/modules/activos/creacion-activo/creacion-activo.component.sass
+++ b/src/app/pages/home/modules/activos/creacion-activo/creacion-activo.component.sass
@@ -3,13 +3,15 @@
 .section__stepper
     background-color: white
     margin-top: 5vh
-    padding: 30px 30px 30px 30px
 .card_content
     display: flex
     flex-wrap: wrap
     width: 70%
-    border: 1px solid $purple
+    border: 0.5px solid $primary
     background-color: $primary-purple
+    padding: 24px
+    div
+        width: 30%
 .buttons__stepper__primary
     border-color: $primary
     color: $primary
@@ -21,18 +23,15 @@
 .form__group>.mat-form-field
     margin: 10px
 .title__options
-    font-size: initial
+    font-size: 12px
     color:$dark-purple
 .subtitle__options
-    font-size: large
+    font-size: 14px
     color:$primary  
     font-weight: 500
 .textarea__options
     height: 100px
     resize: none
-.detail__options
-    font-size: small
-    transform: translate(10px, -10px)
 .button__cancel
     margin-left: -11px
     margin-top: -6px    
