--- a/src/app/pages/home/modules/activos/modificacion-activo/modificacion-activo.component.sass
+++ b/src/app/pages/home/modules/activos/modificacion-activo/modificacion-activo.component.sass
@@ -14,24 +14,23 @@
     display: flex
     flex-wrap: wrap
     width: 70%
-    box-shadow: 1px 1px $purple
+    border: 0.5px solid $primary
     background-color: $primary-purple
+    padding: 24px
 .form__group
     display: flex
 .form__group>.mat-form-field
     margin: 10px
 .title__options
-    font-size: initial
-    color: $dark-purple
+    font-size: 12px
+    color:$dark-purple
 .subtitle__options
-    font-size: large
-    color: $primary
+    font-size: 14px
+    color:$primary  
     font-weight: 500
 .textarea__options
     height: 100px
     resize: none
-.detail__options
-    font-size: small
 .button__cancel
     margin-left: -11px
     margin-top: -6px
