--- a/src/app/pages/home/modules/disminucion/nueva-disminucion-masiva/nueva-disminucion-masiva.component.sass
+++ b/src/app/pages/home/modules/disminucion/nueva-disminucion-masiva/nueva-disminucion-masiva.component.sass
@@ -11,25 +11,26 @@
     margin-right: 12px
     color: $light-grey
 .card_content
-    min-height: 100px
+    display: flex
+    flex-wrap: wrap
     width: 70%
-    box-shadow: 1px 1px $purple
+    border: 0.5px solid $primary
     background-color: $primary-purple
+    padding: 24px
 .title__options
-    font-size: initial
-    color: $dark-purple
+    font-size: 12px
+    color:$dark-purple
 .subtitle__options
-    font-size: large
-    color: $primary
+    font-size: 14px
+    color:$primary  
     font-weight: 500
-    cursor: pointer
-.disabled__input
-    color: #000
-    cursor: pointer
-.custom__file__input
-    opacity: 0
-    position: absolute
-    height: 60px
-    width: 200px
-    transform: translate(-12px, -27px)
-    cursor: pointer
+// .disabled__input
+//     color: #000
+//     cursor: pointer
+// .custom__file__input
+//     opacity: 0
+//     position: absolute
+//     height: 60px
+//     width: 200px
+//     transform: translate(-12px, -27px)
+//     cursor: pointer
