--- a/src/app/pages/home/modules/incremento/nuevo-incremento-masivo/nuevo-incremento-masivo.component.sass
+++ b/src/app/pages/home/modules/incremento/nuevo-incremento-masivo/nuevo-incremento-masivo.component.sass
@@ -11,17 +11,18 @@
     margin-right: 12px
     color: $light-grey
 .card_content
-    height: 100px
+    display: flex
+    flex-wrap: wrap
     width: 70%
-    border: 1px solid $primary
+    border: 0.5px solid $primary
     background-color: $primary-purple
+    padding: 24px
 .title__options
-    font-size: 15px
-    font-weight: 400
-    color: $primary
+    font-size: 12px
+    color:$dark-purple
 .subtitle__options
-    font-size: large
-    color: $primary
+    font-size: 14px
+    color:$primary  
     font-weight: 500
 .disabled__input
     color: #000
