--- a/src/app/pages/home/modules/notificaciones/nueva-notificacion-masiva/nueva-notificacion-masiva.component.sass
+++ b/src/app/pages/home/modules/notificaciones/nueva-notificacion-masiva/nueva-notificacion-masiva.component.sass
@@ -11,16 +11,18 @@
     margin-right: 12px
     color: $light-grey
 .card_content
-    height: 267px
+    display: flex
+    flex-wrap: wrap
     width: 70%
-    box-shadow: 1px 1px $purple
+    border: 0.5px solid $primary
     background-color: $primary-purple
+    padding: 24px
 .title__options
-    font-size: initial
-    color: $dark-purple
+    font-size: 12px
+    color:$dark-purple
 .subtitle__options
-    font-size: large
-    color: $primary
+    font-size: 14px
+    color:$primary  
     font-weight: 500
 .box
     display: flex
