--- a/src/styles.sass
+++ b/src/styles.sass
@@ -23,7 +23,8 @@ html, body
     display: flex
     flex-wrap: wrap
     width: 70%
-    border: 1px solid $purple
+    border: 0.5px solid $primary
     background-color: $primary-purple
+    padding: 24px
 .mat-elevation-z8 
   box-shadow: 0px 1px 1px 1px rgb(0 0 0 / 10%), 0px 2px 2px 1px rgb(0 0 0 / 10%), 0px 2px 2px 2px rgb(0 0 0 / 5%)
