status custom pipe / individual inc-dis model update

--- a/src/app/pages/home/modules/disminucion/nueva-disminucion-individual/nueva-disminucion-individual.component.html
+++ b/src/app/pages/home/modules/disminucion/nueva-disminucion-individual/nueva-disminucion-individual.component.html
@@ -8,7 +8,7 @@
 
 					<mat-form-field appearance="outline">
 						<mat-label>ID usuario</mat-label>
-						<input matInput type="text" placeholder="ID usuario" formControlName="userName" required />
+						<input matInput type="text" placeholder="ID usuario" formControlName="userIdentifier" required />
 					</mat-form-field>
 					<br />
 					<mat-dialog-actions>
@@ -65,7 +65,7 @@
 						<div id="div1" style="float: left; width: 33.3%">
 							<ul>
 								<mat-card-title class="title__options">Destinatario</mat-card-title>
-								<mat-card-subtitle class="subtitle__options">{{ myForm.get('userName')?.value }} </mat-card-subtitle>
+								<mat-card-subtitle class="subtitle__options">{{ myForm.get('userIdentifier')?.value }} </mat-card-subtitle>
 							</ul>
 						</div>
 						<div id="div2" style="float: left; width: 25.3%">
