--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,6 +1,6 @@
 .container
   z-index: 10000
-  position: absolute
+  position: fixed
   top: 0
   left: 0
   height: 100%
@@ -8,7 +8,6 @@
   background-color: rgba(0,0,0,.4)
 
   .spinner
-   
     display: flex
     justify-content: center
     margin-top: 30vh
