--- a/src/app/features/tabla-activos/tabla-activos.component.html
+++ b/src/app/features/tabla-activos/tabla-activos.component.html
@@ -28,7 +28,7 @@
 			<ng-container matColumnDef="status">
 				<th mat-header-cell *matHeaderCellDef>Estado</th>
 				<td mat-cell *matCellDef="let element">
-					{{ element.status }}
+					{{ element.status | status }}
 				</td>
 			</ng-container>
 
