--- a/src/app/features/tabla-usuarios-finales/tabla-usuarios-finales.component.html
+++ b/src/app/features/tabla-usuarios-finales/tabla-usuarios-finales.component.html
@@ -28,7 +28,7 @@
 			<ng-container matColumnDef="status">
 				<th mat-header-cell *matHeaderCellDef>Estado</th>
 				<td mat-cell *matCellDef="let element">
-					{{ element.userId.status }}
+					{{ element.userId.status | status }}
 				</td>
 			</ng-container>
 
