--- a/src/app/pages/home/modules/disminucion/data-disminuciones/data-disminuciones.component.html
+++ b/src/app/pages/home/modules/disminucion/data-disminuciones/data-disminuciones.component.html
@@ -1,7 +1,7 @@
 <div class="section__container">
 	<app-title
 		title="Disminuciones"
-		[textButton]="'CREAR NUEVO'"
+		[textButton]="'CREAR NUEVA'"
 		(crearNuevoEvent)="onCrearNuevoEvent($event)"
 	></app-title>
 	<mat-tab-group mat-align-tabs="start">
