hot-fix modal reemision

--- a/src/app/features/modal-detalle-activo/modal-detalle-activo.component.html
+++ b/src/app/features/modal-detalle-activo/modal-detalle-activo.component.html
@@ -29,7 +29,7 @@
 		<mat-divider></mat-divider>
 		<div class="flex__list__item">
 			<div>Estado</div>
-			<div>{{ activo.status }}</div>
+			<div>{{ activo.status | status }}</div>
 		</div>
 		<mat-divider></mat-divider>
 		<div class="flex__list__item">
