add custom pipes

--- a/src/app/features/modal-detalle-activo/modal-detalle-activo.component.html
+++ b/src/app/features/modal-detalle-activo/modal-detalle-activo.component.html
@@ -23,7 +23,7 @@
 		</div>
 		<mat-divider></mat-divider>
 		<div class="flex__list__item">
-			<div>Cantidad emitida</div>
+			<div>Monto inicial</div>
 			<div>{{ activo.initialAmount | number }}</div>
 		</div>
 		<mat-divider></mat-divider>
