--- a/src/app/features/tabla-activos/tabla-activos.component.html
+++ b/src/app/features/tabla-activos/tabla-activos.component.html
@@ -8,7 +8,7 @@
 			<ng-container matColumnDef="symbol">
 				<th mat-header-cell *matHeaderCellDef>Sigla</th>
 				<td mat-cell *matCellDef="let element">
-					<span class="text__id">{{ element.symbol }}</span>
+					<span class="text__id">{{ element.symbol | uppercase }}</span>
 				</td>
 			</ng-container>
 
