--- a/src/app/features/tabla-usuarios-backoffice/tabla-usuarios-backoffice.component.html
+++ b/src/app/features/tabla-usuarios-backoffice/tabla-usuarios-backoffice.component.html
@@ -5,17 +5,17 @@
                   The actual rendered columns are set as a property on the row definition" -->
 
 			<!-- ID Column -->
-			<ng-container matColumnDef="dni">
+			<ng-container matColumnDef="cuil">
 				<th mat-header-cell *matHeaderCellDef>ID/CUIL/DNI</th>
 				<td mat-cell *matCellDef="let element">
-					<span class="text__id">{{ element.dni }}</span>
+					<span class="text__id">{{ element.cuil | cuil }}</span>
 				</td>
 			</ng-container>
 
 			<!-- Type Column -->
 			<ng-container matColumnDef="userName">
 				<th mat-header-cell *matHeaderCellDef>Nombre</th>
-				<td mat-cell *matCellDef="let element">{{ element.userName }}</td>
+				<td mat-cell *matCellDef="let element">{{ element.shortName }} {{ element.lastName }}</td>
 			</ng-container>
 
 			<!-- Concept Column -->
