--- a/src/app/features/tabla-activos/tabla-activos.component.sass
+++ b/src/app/features/tabla-activos/tabla-activos.component.sass
@@ -15,3 +15,18 @@ table
     font-weight: bold
 .image__status
     margin-bottom: -7px       
+
+.ACTIVE,.INACTIVE,.PENDING_APPROVE,.BLOCKED
+    height: 8px
+    width: 8px
+    border-radius: 50%
+    display: inline-block
+    margin-right: 3px
+.ACTIVE
+    background-color: #6ebe64
+.INACTIVE
+    background-color: $grey
+.PENDING_APPROVE
+    background-color: #daa532
+.BLOCKED
+    background-color: #d11515
