--- a/src/app/pages/home/home.component.sass
+++ b/src/app/pages/home/home.component.sass
@@ -48,3 +48,6 @@
   color: #ababab
   font-size: 12px
   margin: 25px
+
+::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline-thick
+  color: $primary !important
