--- a/src/app/pages/home/modules/usuarios/alta-usuarios/alta-usuarios.component.html
+++ b/src/app/pages/home/modules/usuarios/alta-usuarios/alta-usuarios.component.html
@@ -45,14 +45,16 @@
 						<input matInput type="text" placeholder="Usuario" formControlName="username" required />
 					</mat-form-field>
 
-					<mat-form-field appareance="outline" *ngIf="isBackoffice">
-						<mat-label>Rol</mat-label>
-						<mat-select formControlName="rol">
-							<mat-option *ngFor="let rol of roles" [value]="rol">
-								{{ rol.rol }}
-							</mat-option>
-						</mat-select>
-					</mat-form-field>
+					<ng-container *ngIf="isBackoffice">
+						<mat-form-field appearance="outline">
+							<mat-label>Rol</mat-label>
+							<mat-select formControlName="rol">
+								<mat-option *ngFor="let rol of roles" [value]="rol">
+									{{ rol.rol }}
+								</mat-option>
+							</mat-select>
+						</mat-form-field>
+					</ng-container>
 				</div>
 
 				<div class="form__group">
