--- a/src/app/features/tabla-masivos/tabla-masivos.component.html
+++ b/src/app/features/tabla-masivos/tabla-masivos.component.html
@@ -30,13 +30,13 @@
 			<!-- Creation Column -->
 			<ng-container matColumnDef="creacion">
 				<th mat-header-cell *matHeaderCellDef>Creación</th>
-				<td mat-cell *matCellDef="let element">{{ element.createdAt | date }}</td>
+				<td mat-cell *matCellDef="let element">{{ element.createdAt | date: 'dd/MM/yyyy' }}</td>
 			</ng-container>
 
 			<!-- Upgrade Column -->
 			<ng-container matColumnDef="actualizacion">
 				<th mat-header-cell *matHeaderCellDef>Actualización</th>
-				<td mat-cell *matCellDef="let element">{{ element.updatedAt | date }}</td>
+				<td mat-cell *matCellDef="let element">{{ element.updatedAt | date: 'dd/MM/yyyy' }}</td>
 			</ng-container>
 
 			<ng-container matColumnDef="star" stickyEnd>
