--- a/src/app/features/tabla-usuarios-backoffice/tabla-usuarios-backoffice.component.html
+++ b/src/app/features/tabla-usuarios-backoffice/tabla-usuarios-backoffice.component.html
@@ -21,7 +21,7 @@
 			<!-- Concept Column -->
 			<ng-container matColumnDef="createdAt">
 				<th mat-header-cell *matHeaderCellDef>Creación</th>
-				<td mat-cell *matCellDef="let element">{{ element.createdAt | date }}</td>
+				<td mat-cell *matCellDef="let element">{{ element.createdAt | date: 'dd/MM/yyyy' }}</td>
 			</ng-container>
 
 			<!-- Status Column -->
