--- a/src/app/pages/home/modules/activos/modificacion-activo/modificacion-activo.component.html
+++ b/src/app/pages/home/modules/activos/modificacion-activo/modificacion-activo.component.html
@@ -152,8 +152,8 @@
 						<ul>
 							<mat-card-title class="title__options">Vigencia</mat-card-title>
 							<mat-card-subtitle class="subtitle__options"
-								>{{ myForm.get('validFrom')?.value | date }} -
-								{{ myForm.get('validTo')?.value | date }}</mat-card-subtitle
+								>{{ myForm.get('validFrom')?.value | date: 'dd/MM/yyyy' }} -
+								{{ myForm.get('validTo')?.value | date: 'dd/MM/yyyy' }}</mat-card-subtitle
 							>
 						</ul>
 					</div>
