--- a/src/app/pages/home/modules/incremento/nuevo-incremento-masivo/nuevo-incremento-masivo.component.html
+++ b/src/app/pages/home/modules/incremento/nuevo-incremento-masivo/nuevo-incremento-masivo.component.html
@@ -57,13 +57,7 @@
 								Cargar usuarios
 							</span>
 						</mat-label>
-						<input
-							matInput
-							formControlName="excelFile"
-							class="disabled__input"
-							placeholder="Cargar usuarios"
-							required
-						/>
+						<input matInput formControlName="excelFile" class="disabled__input" placeholder="Cargar usuarios" readonly="readonly" required/>
 					</mat-form-field>
 					<br />
 					<mat-dialog-actions>
