--- a/src/app/pages/home/modules/usuarios/detalle-usuario/detalle-usuario.component.html
+++ b/src/app/pages/home/modules/usuarios/detalle-usuario/detalle-usuario.component.html
@@ -25,7 +25,7 @@
 				<tr>E-mail</tr>
 			</td>
 			<td>
-				<tr>{{usuario.dni}}</tr>
+				<tr>{{usuario.dni | number}}</tr>
 				<tr>{{usuario.cuil}}</tr>
 				<tr>{{usuario.phoneNumber}}</tr>
 				<tr>{{usuario.email}}</tr>
