--- a/src/app/features/tabla-activos/tabla-activos.component.html
+++ b/src/app/features/tabla-activos/tabla-activos.component.html
@@ -49,7 +49,7 @@
 						<button mat-menu-item (click)="openDetalle(element)">
 							<span>Ver detalle</span>
 						</button>
-						<button mat-menu-item (click)="modificarActivo(element.id)" disabled>
+						<button mat-menu-item (click)="modificarActivo(element.id)">
 							<span>Editar</span>
 						</button>
 						<div >
