--- a/src/app/pages/home/modules/disminucion/data-disminuciones/data-disminuciones.component.html
+++ b/src/app/pages/home/modules/disminucion/data-disminuciones/data-disminuciones.component.html
@@ -5,9 +5,9 @@
 		(crearNuevoEvent)="onCrearNuevoEvent($event)"
 	></app-title>
 	<mat-tab-group mat-align-tabs="start">
-		<mat-tab label="Masivos" [disabled]="true">
+		<mat-tab label="Masivos">
 			<ng-container *ngIf="incrementsMasive">
-				<!-- <app-tabla-masivos [incrementsMasive]="incrementsMasive"></app-tabla-masivos> -->
+				<app-tabla-masivos [incrementsMasive]="incrementsMasive"></app-tabla-masivos>
 			</ng-container>
 		</mat-tab>
 		<mat-tab label="Individuales" [disabled]="true">
