--- a/src/app/pages/home/modules/disminucion/nueva-disminucion-individual/nueva-disminucion-individual.component.html
+++ b/src/app/pages/home/modules/disminucion/nueva-disminucion-individual/nueva-disminucion-individual.component.html
@@ -6,27 +6,56 @@
 				<mat-step [stepControl]="myForm">
 					<ng-template matStepLabel>Destinatario</ng-template>
 
-					<mat-form-field appearance="outline">
-						<mat-label>DNI / CUIL / Nombre de usuario</mat-label>
-						<input matInput type="text" placeholder="ID usuario" formControlName="userIdentifier" required />
-						<mat-hint align="start"><strong>(CUIL y DNI sin espacios, puntos o guiones)</strong> </mat-hint>
-					</mat-form-field>
+					<div class="container__user__info">
+						<mat-form-field appearance="outline" style="width: 40%; margin-bottom: 10px;">
+							<mat-label>DNI / CUIL / Nombre de usuario</mat-label>
+							<input matInput type="text" placeholder="ID usuario" formControlName="userIdentifier" required />
+							<mat-hint align="start"><strong>(CUIL y DNI sin espacios, puntos o guiones)</strong> </mat-hint>
+						</mat-form-field>
+	
+						<mat-card class="card_content">
+							<div id="div1" style="float: left; width: 33.3%">
+								<ul>
+									<mat-card-title class="title__options">Nombre</mat-card-title>
+									<mat-card-subtitle class="subtitle__options"> Test </mat-card-subtitle>
+								</ul>
+							</div>
+							<div id="div2" style="float: left; width: 25.3%">
+								<ul>
+									<mat-card-title class="title__options">DNI </mat-card-title>
+									<mat-card-subtitle class="subtitle__options">
+										38403695
+									</mat-card-subtitle>
+								</ul>
+							</div>
+							<div id="div3" style="float: left; width: 33.3%">
+								<ul>
+									<mat-card-title class="title__options">CUIL</mat-card-title>
+									<mat-card-subtitle class="subtitle__options">20-38403695-7</mat-card-subtitle>
+								</ul>
+							</div>
+						</mat-card>
+					</div>
+
 					<br />
 					<mat-dialog-actions>
-						<button type="button" mat-stroked-button color="primary" class="buttons__stepper__primary" matStepperNext>
+						<button type="button" mat-stroked-button color="primary" class="buttons__stepper">
 							Verificar
+						</button>
+						<button type="button" mat-stroked-button color="primary" class="buttons__stepper__primary" matStepperNext>
+							Siguiente
 						</button>
 					</mat-dialog-actions>
 				</mat-step>
 
 				<mat-step [stepControl]="myForm">
 					<ng-template matStepLabel>Activo y cantidad</ng-template>
-					<mat-form-field appearance="outline">
+					<mat-form-field appearance="outline" style="width: 25%;">
 						<mat-label>Cantidad</mat-label>
 						<input matInput type="number" formControlName="amount" placeholder="Cantidad de BEN" required />
 					</mat-form-field>
 
-					<mat-form-field appearance="outline" style="margin-left: 15px">
+					<mat-form-field appearance="outline" style="width: 13% ;margin-left: 15px">
 						<mat-label>Activo</mat-label>
 						<mat-select formControlName="tokenId">
 							<mat-option *ngFor="let activo of activos" [value]="activo">
@@ -45,7 +74,7 @@
 
 				<mat-step [stepControl]="myForm">
 					<ng-template matStepLabel>Observaciones</ng-template>
-					<mat-form-field appearance="outline">
+					<mat-form-field appearance="outline" style="width: 40%;">
 						<mat-label>Observaciones</mat-label>
 						<input matInput type="text" formControlName="notes" placeholder="Escribe algo" />
 						<mat-hint align="start"><strong>(Opcional)</strong> </mat-hint>
