--- a/src/app/pages/home/modules/incremento/data-incrementos/data-incrementos.component.html
+++ b/src/app/pages/home/modules/incremento/data-incrementos/data-incrementos.component.html
@@ -1,9 +1,9 @@
 <div class="section__container">
 	<app-title title="Incrementos" [textButton]="'CREAR NUEVO'" (crearNuevoEvent)="onCrearNuevoEvent($event)"></app-title>
 	<mat-tab-group mat-align-tabs="start">
-		<mat-tab label="Masivos" [disabled]="true">
+		<mat-tab label="Masivos">
 			<ng-container *ngIf="incrementsMasive">
-				<!-- <app-tabla-masivos [incrementsMasive]="incrementsMasive"></app-tabla-masivos> -->
+				<app-tabla-masivos [incrementsMasive]="incrementsMasive"></app-tabla-masivos>
 			</ng-container>
 		</mat-tab>
 		<mat-tab label="Individuales" [disabled]="true">
