--- a/src/app/pages/home/modules/incremento/nuevo-incremento-individual/nuevo-incremento-individual.component.sass
+++ b/src/app/pages/home/modules/incremento/nuevo-incremento-individual/nuevo-incremento-individual.component.sass
@@ -7,9 +7,12 @@
 .buttons__stepper__primary
     border-color: $primary
     color: $primary
+    &:disabled
+        border-color: $light-gray
 .buttons__stepper
     margin-right: 12px
-    color: $light-grey
+    color: $grey
+    border-color: $grey
 .card_content
     display: flex
     flex-wrap: wrap
@@ -24,3 +27,27 @@
     font-size: 14px
     color:$primary  
     font-weight: 500
+.container__user__info
+    display: flex
+    .mat-form-field
+        margin-right: 20px
+    .mat-card
+        transition: all .5s ease-out
+        display: flex
+        justify-content: space-around
+        width: 40%
+        height: 75px
+        padding: 4px
+        flex-wrap: wrap
+        border: 0.5px solid $primary
+        background-color: $primary-purple
+        div
+            margin: 12px 10px
+            .mat-card-title
+                margin: 0
+            .mat-card-subtitle
+                margin: 0
+.hidden
+    transition: all .5s ease-out
+    transform: translateY(10px)
+    opacity: 0
