--- a/src/app/pages/home/modules/disminucion/nueva-disminucion-individual/nueva-disminucion-individual.component.html
+++ b/src/app/pages/home/modules/disminucion/nueva-disminucion-individual/nueva-disminucion-individual.component.html
@@ -3,52 +3,49 @@
 	<div class="section__stepper">
 		<form [formGroup]="myForm" (ngSubmit)="submit()">
 			<mat-stepper orientation="vertical" [linear]="isLinear" #stepper>
-				<mat-step [stepControl]="myForm">
-					<ng-template matStepLabel>Destinatario</ng-template>
-
-					<div class="container__user__info">
-						<mat-form-field appearance="outline" style="width: 40%; margin-bottom: 10px;">
-							<mat-label>DNI / CUIL / Nombre de usuario</mat-label>
-							<input matInput type="text" placeholder="ID usuario" formControlName="userIdentifier" required />
-							<mat-hint align="start"><strong>(CUIL y DNI sin espacios, puntos o guiones)</strong> </mat-hint>
-						</mat-form-field>
-	
-						<mat-card class="card_content">
-							<div id="div1" style="float: left; width: 33.3%">
-								<ul>
+				<mat-step [stepControl]="verifyForm">
+					<form [formGroup]="verifyForm">	
+						<ng-template matStepLabel>Destinatario</ng-template>
+						<div class="container__user__info">
+							<mat-form-field appearance="outline" style="width: 40%; margin-bottom: 15px;">
+								<mat-label>DNI / CUIL / Nombre de usuario</mat-label>
+								<input matInput type="text" placeholder="ID usuario" formControlName="unassignedUser" required />
+								<mat-hint align="start"><strong>(CUIL y DNI sin espacios, puntos o guiones)</strong> </mat-hint>
+							</mat-form-field>
+							<mat-card [ngClass]="myForm.value.userIdentifier ? 'card_content_user' : 'hidden'" >
+								<div>
 									<mat-card-title class="title__options">Nombre</mat-card-title>
-									<mat-card-subtitle class="subtitle__options"> Test </mat-card-subtitle>
-								</ul>
-							</div>
-							<div id="div2" style="float: left; width: 25.3%">
-								<ul>
-									<mat-card-title class="title__options">DNI </mat-card-title>
-									<mat-card-subtitle class="subtitle__options">
-										38403695
+									<mat-card-subtitle class="subtitle__options" *ngIf="usuario"> 
+										{{usuario.shortName}} {{usuario.lastName}} 
 									</mat-card-subtitle>
-								</ul>
-							</div>
-							<div id="div3" style="float: left; width: 33.3%">
-								<ul>
+								</div>
+								<div>
+									<mat-card-title class="title__options">DNI </mat-card-title>
+									<mat-card-subtitle class="subtitle__options" *ngIf="usuario">
+										{{usuario.dni | number}}
+									</mat-card-subtitle>
+								</div>
+								<div>
 									<mat-card-title class="title__options">CUIL</mat-card-title>
-									<mat-card-subtitle class="subtitle__options">20-38403695-7</mat-card-subtitle>
-								</ul>
-							</div>
-						</mat-card>
-					</div>
-
+									<mat-card-subtitle class="subtitle__options" *ngIf="usuario"> 
+										{{usuario.cuil | cuil}} 
+									</mat-card-subtitle>
+								</div>
+							</mat-card>
+						</div>
+					</form>
 					<br />
 					<mat-dialog-actions>
-						<button type="button" mat-stroked-button color="primary" class="buttons__stepper">
+						<button type="button" mat-stroked-button color="primary" class="buttons__stepper" (click)="verifyUsuario()">
 							Verificar
 						</button>
-						<button type="button" mat-stroked-button color="primary" class="buttons__stepper__primary" matStepperNext>
+						<button type="button" mat-stroked-button color="primary" class="buttons__stepper__primary" [disabled]="!myForm.value.userIdentifier" matStepperNext>
 							Siguiente
 						</button>
 					</mat-dialog-actions>
 				</mat-step>
 
-				<mat-step [stepControl]="myForm">
+				<mat-step [stepControl]="myForm.value.amount && myForm.value.tokenId">
 					<ng-template matStepLabel>Activo y cantidad</ng-template>
 					<mat-form-field appearance="outline" style="width: 25%;">
 						<mat-label>Cantidad</mat-label>
@@ -72,7 +69,7 @@
 					</mat-dialog-actions>
 				</mat-step>
 
-				<mat-step [stepControl]="myForm">
+				<mat-step>
 					<ng-template matStepLabel>Observaciones</ng-template>
 					<mat-form-field appearance="outline" style="width: 40%;">
 						<mat-label>Observaciones</mat-label>
