--- a/src/app/pages/home/modules/incremento/nuevo-incremento-individual/nuevo-incremento-individual.component.html
+++ b/src/app/pages/home/modules/incremento/nuevo-incremento-individual/nuevo-incremento-individual.component.html
@@ -4,7 +4,7 @@
 		<form [formGroup]="myForm" (ngSubmit)="submit()">
 			<mat-stepper orientation="vertical" [linear]="isLinear" #stepper>
 				<mat-step [stepControl]="verifyForm">
-					<form [formGroup]="verifyForm" (ngSubmit)="submit()">	
+					<form [formGroup]="verifyForm">	
 						<ng-template matStepLabel>Destinatario</ng-template>
 						<div class="container__user__info">
 							<mat-form-field appearance="outline" style="width: 40%; margin-bottom: 15px;">
@@ -12,7 +12,7 @@
 								<input matInput type="text" placeholder="ID usuario" formControlName="unassignedUser" required />
 								<mat-hint align="start"><strong>(CUIL y DNI sin espacios, puntos o guiones)</strong> </mat-hint>
 							</mat-form-field>
-							<mat-card [ngClass]="verifyForm.value.verified ? 'card_content_user' : 'hidden'" >
+							<mat-card [ngClass]="myForm.value.userIdentifier ? 'card_content_user' : 'hidden'" >
 								<div>
 									<mat-card-title class="title__options">Nombre</mat-card-title>
 									<mat-card-subtitle class="subtitle__options" *ngIf="usuario"> 
@@ -39,13 +39,13 @@
 						<button type="button" mat-stroked-button color="primary" class="buttons__stepper" (click)="verifyUsuario()">
 							Verificar
 						</button>
-						<button type="button" mat-stroked-button color="primary" class="buttons__stepper__primary" [disabled]="!verifyForm.value.verified" matStepperNext>
+						<button type="button" mat-stroked-button color="primary" class="buttons__stepper__primary" [disabled]="!myForm.value.userIdentifier" matStepperNext>
 							Siguiente
 						</button>
 					</mat-dialog-actions>
 				</mat-step>
 
-				<mat-step [stepControl]="secondForm.value.amount">
+				<mat-step [stepControl]="myForm.value.amount && myForm.value.tokenId">
 					<ng-template matStepLabel>Activo y cantidad</ng-template>
 					<mat-form-field appearance="outline" style="width: 25%;">
 						<mat-label>Cantidad</mat-label>
