--- a/src/app/pages/home/modules/usuarios/modificacion-usuario/modificacion-usuario.component.sass
+++ b/src/app/pages/home/modules/usuarios/modificacion-usuario/modificacion-usuario.component.sass
@@ -1,15 +1,9 @@
 @import '../../../../../../assets/style-variables/variables'
 
-.section__stepper
+.section__edit
     background-color: white
     margin-top: 2vh
-    padding: 30px 30px 30px 30px
-.buttons__stepper__primary
-    border-color: $primary
-    color: $primary
-.buttons__stepper
-    margin-right: 12px
-    color: $light-grey
+    padding: 30px
 .card_content
     display: flex
     flex-wrap: wrap
@@ -22,16 +16,19 @@
 .form__group>.mat-form-field
     margin: 10px
     width: 30%
-.title__options
-    font-size: 12px
-    color:$dark-purple
-.subtitle__options
-    font-size: 14px
-    color:$primary  
+.subtitle
+    margin-bottom: 0
     font-weight: 500
 .textarea__options
     height: 100px
     resize: none
-.button__cancel
-    margin-left: -11px
-    margin-top: -6px
+.btn_group
+    width: 65%
+    text-align: right
+.buttons__stepper__primary
+    border-color: $primary
+    color: #ffffff
+    background-color: $primary
+.buttons__stepper
+    margin-right: 15px
+    color: $medium-gray
