--- a/src/app/pages/home/modules/usuarios/modificacion-usuario/modificacion-usuario.component.html
+++ b/src/app/pages/home/modules/usuarios/modificacion-usuario/modificacion-usuario.component.html
@@ -1,202 +1,58 @@
-<h1 *ngIf="isBackoffice">Edición de usuario Back Office</h1>
-<h1 *ngIf="!isBackoffice">Edición de usuario Final</h1>
-<div class="section__stepper">
-	<mat-stepper orientation="vertical" [linear]="isLinear" #stepper>
-		<mat-step [stepControl]="firstStep">
-			<ng-template matStepLabel>Datos personales</ng-template>
-			<br />
-			<form [formGroup]="firstStep">
-				<div class="form__group">
-					<mat-form-field appearance="outline">
-						<mat-label>Nombre</mat-label>
-						<input matInput placeholder="Nombre" formControlName="shortName" required />
-					</mat-form-field>
+<div style="display: flex;">
+	<div class="back__btn__container" [routerLink]="'/home/usuarios/'+userType">
+		<mat-icon class="back__btn">arrow_back</mat-icon>
+	</div>
+	<h1 style="margin-left: 10px;">{{(userType === 'backoffice') ? 'Editar usuario Back Office' : 'Editar de usuario Final'}}</h1>
+</div>
+<div class="section__edit">
+	<form [formGroup]="editForm">
+		<h2 class="subtitle">Datos personales</h2>
+		<br />
+		<div class="form__group">
+			<mat-form-field appearance="outline">
+				<mat-label>Nombre</mat-label>
+				<input matInput placeholder="Nombre" formControlName="shortName" required />
+			</mat-form-field>
 
-					<mat-form-field appearance="outline">
-						<mat-label>Apellido</mat-label>
-						<input matInput placeholder="Apellido" formControlName="lastName" required />
-					</mat-form-field>
-				</div>
+			<mat-form-field appearance="outline">
+				<mat-label>Apellido</mat-label>
+				<input matInput placeholder="Apellido" formControlName="lastName" required />
+			</mat-form-field>
+		</div>
 
-				<div class="form__group">
-					<mat-form-field appearance="outline">
-						<mat-label>DNI</mat-label>
-						<input matInput placeholder="DNI" formControlName="dni" required readonly/>
-					</mat-form-field>
+		<div class="form__group">
+			<mat-form-field appearance="outline">
+				<mat-label>DNI</mat-label>
+				<input matInput placeholder="DNI" formControlName="dni" required readonly/>
+			</mat-form-field>
 
-					<mat-form-field appearance="outline">
-						<mat-label>CUIL</mat-label>
-						<input matInput placeholder="CUIL" formControlName="cuil" required readonly/>
-					</mat-form-field>
-				</div>
-			</form>
-			<br />
-			<mat-dialog-actions>
-				<button mat-stroked-button  class="buttons__stepper__primary" matStepperNext>Siguiente</button>
-			</mat-dialog-actions>
-		</mat-step>
+			<mat-form-field appearance="outline">
+				<mat-label>CUIL</mat-label>
+				<input matInput placeholder="CUIL" formControlName="cuil" required readonly/>
+			</mat-form-field>
+		</div>
+		<br />
+		<h2 class="subtitle">Datos de contacto</h2>
+		<br />
+		<div class="form__group">
+			<mat-form-field appearance="outline">
+				<mat-label>E-mail</mat-label>
+				<input matInput placeholder="E-mail" formControlName="email" required />
+			</mat-form-field>
 
-		<mat-step [stepControl]="secondStep">
-			<ng-template matStepLabel>Credenciales</ng-template>
-			<br />
-			<form [formGroup]="secondStep">
-				<div class="form__group">
-					<mat-form-field appearance="outline">
-						<mat-label>Usuario</mat-label>
-						<input matInput placeholder="Usuario" formControlName="username" required readonly />
-					</mat-form-field>
-
-					<mat-form-field appareance="outline" *ngIf="isBackoffice">
-						<mat-label>Rol</mat-label>
-						<mat-select>
-							<mat-option *ngFor="let rol of roles" [value]="rol">
-								{{ rol }}
-							</mat-option>
-						</mat-select>
-					</mat-form-field>
-				</div>
-
-				<div class="form__group">
-					<mat-form-field appearance="outline">
-						<mat-label>Contraseña</mat-label>
-						<input matInput placeholder="Contraseña" formControlName="password" type="password" readonly/>
-					</mat-form-field>
-
-					<mat-form-field appearance="outline">
-						<mat-label>Repetir contraseña</mat-label>
-						<input matInput placeholder="Repetir contraseña" formControlName="repeat_pass" type="password" readonly/>
-					</mat-form-field>
-				</div>
-			</form>
-			<br />
-			<mat-dialog-actions>
-				<button mat-stroked-button class="buttons__stepper" matStepperPrevious>Anterior</button>
-				<button mat-stroked-button  class="buttons__stepper__primary" matStepperNext>Siguiente</button>
-			</mat-dialog-actions>
-		</mat-step>
-
-		<mat-step [stepControl]="thirdStep">
-			<ng-template matStepLabel>Datos de contacto</ng-template>
-			<br />
-			<form [formGroup]="thirdStep">
-				<div class="form__group">
-					<mat-form-field appearance="outline">
-						<mat-label>E-mail</mat-label>
-						<input matInput placeholder="E-mail" formControlName="email" required />
-					</mat-form-field>
-
-					<mat-form-field appearance="outline">
-						<mat-label>Teléfono</mat-label>
-						<input matInput placeholder="Teléfono" formControlName="phoneNumber" required />
-					</mat-form-field>
-				</div>
-			</form>
-
-			<br />
-			<mat-dialog-actions>
-				<button mat-stroked-button class="buttons__stepper" matStepperPrevious>Anterior</button>
-				<button mat-stroked-button  class="buttons__stepper__primary" matStepperNext>Siguiente</button>
-			</mat-dialog-actions>
-		</mat-step>
-
-		<mat-step>
-			<ng-template matStepLabel>Confirmacion</ng-template>
-			<br />
-
-			<mat-card class="card_content">
-				<div style="float: left; width: 25%">
-					<ul>
-						<mat-card-title class="title__options">Nombre</mat-card-title>
-						<mat-card-subtitle class="subtitle__options">{{ firstStep.get('shortName')?.value }}</mat-card-subtitle>
-					</ul>
-				</div>
-				<div style="float: left; width: 25%">
-					<ul>
-						<mat-card-title class="title__options">Apellido</mat-card-title>
-						<mat-card-subtitle class="subtitle__options">{{ firstStep.get('lastName')?.value }}</mat-card-subtitle>
-					</ul>
-				</div>
-				<div style="float: left; width: 25%">
-					<ul>
-						<mat-card-title class="title__options">DNI</mat-card-title>
-						<mat-card-subtitle class="subtitle__options">{{ firstStep.get('dni')?.value }}</mat-card-subtitle>
-					</ul>
-				</div>
-				<div style="float: left; width: 25%">
-					<ul>
-						<mat-card-title class="title__options">CUIL</mat-card-title>
-						<mat-card-subtitle class="subtitle__options">{{ firstStep.get('cuil')?.value }}</mat-card-subtitle>
-					</ul>
-				</div>
-			</mat-card>
-
-			<br />
-
-			<div *ngIf="isBackoffice">
-				<mat-card class="card_content">
-					<div style="float: left; width: 50%">
-						<ul>
-							<mat-card-title class="title__options">Usuario</mat-card-title>
-							<mat-card-subtitle class="subtitle__options">{{ secondStep.get('userName')?.value }}</mat-card-subtitle>
-						</ul>
-					</div>
-					<div style="float: left; width: 50%">
-						<ul>
-							<mat-card-title class="title__options">Rol asignado</mat-card-title>
-							<mat-card-subtitle class="subtitle__options">{{ secondStep.get('rol')?.value }}</mat-card-subtitle>
-						</ul>
-					</div>
-				</mat-card>
-
-				<br />
-
-				<mat-card class="card_content">
-					<div style="float: left; width: 50%">
-						<ul>
-							<mat-card-title class="title__options">E-mail</mat-card-title>
-							<mat-card-subtitle class="subtitle__options">{{ thirdStep.get('email')?.value }}</mat-card-subtitle>
-						</ul>
-					</div>
-					<div style="float: left; width: 50%">
-						<ul>
-							<mat-card-title class="title__options">Teléfono</mat-card-title>
-							<mat-card-subtitle class="subtitle__options">{{ thirdStep.get('phoneNumber')?.value }}</mat-card-subtitle>
-						</ul>
-					</div>
-				</mat-card>
-				<br />
-			</div>
-
-			<div *ngIf="!isBackoffice">
-				<mat-card class="card_content">
-					<div style="float: left; width: 30%">
-						<ul>
-							<mat-card-title class="title__options">Usuario</mat-card-title>
-							<mat-card-subtitle class="subtitle__options">{{ secondStep.get('username')?.value }}</mat-card-subtitle>
-						</ul>
-					</div>
-					<div style="float: left; width: 40%">
-						<ul>
-							<mat-card-title class="title__options">E-mail</mat-card-title>
-							<mat-card-subtitle class="subtitle__options">{{ thirdStep.get('email')?.value }}</mat-card-subtitle>
-						</ul>
-					</div>
-					<div style="float: left; width: 30%">
-						<ul>
-							<mat-card-title class="title__options">Teléfono</mat-card-title>
-							<mat-card-subtitle class="subtitle__options">{{ thirdStep.get('phoneNumber')?.value }}</mat-card-subtitle>
-						</ul>
-					</div>
-				</mat-card>
-				<br />
-			</div>
-
-			<mat-dialog-actions>
-				<button mat-stroked-button class="buttons__stepper" matStepperPrevious>Anterior</button>
-				<button mat-stroked-button class="buttons__stepper__primary" matStepperNext type="button" (click)="submit()">
-					Confirmar
-				</button>
-			</mat-dialog-actions>
-		</mat-step>
-	</mat-stepper>
+			<mat-form-field appearance="outline">
+				<mat-label>Teléfono</mat-label>
+				<input matInput placeholder="Teléfono" formControlName="phoneNumber" required />
+			</mat-form-field>
+		</div>
+	</form>
+	<br />
+	<div class="btn_group">
+		<button mat-stroked-button class="buttons__stepper" [routerLink]="'/home/usuarios/'+userType">
+			Descartar
+		</button>
+		<button mat-raised-button class="buttons__stepper__primary" (click)="submit()">
+			Confirmar
+		</button>
+	</div>
 </div>
