edicion usuarios terminada

--- a/src/app/pages/home/modules/activos/creacion-activo/creacion-activo.component.html
+++ b/src/app/pages/home/modules/activos/creacion-activo/creacion-activo.component.html
@@ -54,7 +54,7 @@
 						<mat-date-range-picker #picker></mat-date-range-picker>
 					</mat-form-field>
 
-					<mat-checkbox  style="margin: 25px 20px" formControlName="transferable">
+					<mat-checkbox color="primary" style="margin: 25px 20px" formControlName="transferable">
 						Transferible
 					</mat-checkbox>
 				</div>
