--- a/src/app/pages/home/modules/usuarios/alta-usuarios/alta-usuarios.component.sass
+++ b/src/app/pages/home/modules/usuarios/alta-usuarios/alta-usuarios.component.sass
@@ -3,7 +3,7 @@
 .section__stepper
     background-color: white
     margin-top: 2vh
-    padding: 30px 30px 30px 30px
+    padding: 30px
 .buttons__stepper__primary
     border-color: $primary
     color: $primary
