--- a/src/assets/style-variables/variables.sass
+++ b/src/assets/style-variables/variables.sass
@@ -5,6 +5,7 @@ $assetsPath: "/assets"
 /** VARIABLES **/ 
 
 $primary:  #9c27b0
+$primary-faded:  #9b27b048
 $primary-blue: #1d46fb
 $grey: #959595
 $primary-purple: #9c27b030
