--- a/src/app/pages/home/modules/activos/creacion-activo/creacion-activo.component.sass
+++ b/src/app/pages/home/modules/activos/creacion-activo/creacion-activo.component.sass
@@ -17,8 +17,7 @@
     color: $primary
 .buttons__stepper
     margin-right: 12px
-    border-color: $medium-gray
-    color: $medium-gray
+    color: $light-grey
 .form__group
     display: flex
 .form__group>.mat-form-field
