--- a/src/app/pages/home/modules/usuarios/detalle-usuario/detalle-usuario.component.sass
+++ b/src/app/pages/home/modules/usuarios/detalle-usuario/detalle-usuario.component.sass
@@ -2,7 +2,7 @@
     
 .section__container
     margin: 1.5em
-    padding: 1em
+    padding: 20px
     width: 95%
     display: flex
     align-items: center
@@ -10,18 +10,23 @@
     background-color: #ffffff
 
 .image__container
-    width: 15%
+    width: 20%
     text-align: center
 .profile__img
-    width: 10em
-    height: 10em
+    min-width: 100px
+    min-height: 100px
+    width: 8vw
+    height: 8vw
     margin: 0 auto
     background-color: #aaa
     border-radius: 50%
-
+.mat-card-title
+    font-size: 20px
 .user__management
     width: 40%
     margin-right: 20px
+.user__info
+    width: 40%
 .flex__user__info
     margin: 10px 0
     display: flex
@@ -29,7 +34,8 @@
     justify-content: space-between
 .highlight__info
     font-weight: bolder
-    margin-right: 5px
+    margin-left: 5px
+    margin-right: 10px
 .buttons__management
     margin-right: 12px
 .status__btn
