--- a/src/styles.sass
+++ b/src/styles.sass
@@ -8,7 +8,11 @@ html, body
   body p
     margin: 0!important
 
-/** TITLE - SUBTITLE -- BACK BUTTON**/
+//SPINNER
+.mat-progress-spinner circle, .mat-spinner circle
+  stroke: $primary
+
+// TITLE - SUBTITLE - BACK BUTTON
 .section__title
   color: $title
   font-size: 1.6rem!important
@@ -43,7 +47,7 @@ html, body
 .mat-form-field.mat-form-field-invalid .mat-form-field-label .file__input__label
   color: #00000099 !important
 
-//  TABS
+// TABS
 .mat-ink-bar
   background-color: $primary !important
 
@@ -54,6 +58,21 @@ html, body
   box-shadow: 0px 1px 1px 1px rgb(0 0 0 / 10%), 0px 2px 2px 1px rgb(0 0 0 / 10%), 0px 2px 2px 2px rgb(0 0 0 / 5%)
 .mat-paginator-page-size
   visibility: hidden
+
+// INPUT
+  //INPUT LABEL FOCUSED
+.mat-form-field.mat-focused .mat-form-field-label
+  color: $primary
+  //CHECKBOX
+.mat-checkbox-checked.mat-primary .mat-checkbox-background, .mat-calendar-body-selected
+  background-color: $primary
+  //DATEPICKER
+.mat-datepicker-toggle-active
+  color: $primary
+.mat-checkbox-checked.mat-primary .mat-checkbox-background, .mat-calendar-body-selected
+    background-color: $primary
+.mat-calendar-body-in-range::before, .mat-calendar-body-cell:not(.mat-calendar-body-disabled):hover>.mat-calendar-body-cell-content:not(.mat-calendar-body-selected):not(.mat-calendar-body-comparison-identical)
+    background-color: $primary-faded
 
 // NOTIFICACIONES
 .simple-notification-wrapper
