--- a/src/app/pages/home/components/header/header.component.sass
+++ b/src/app/pages/home/components/header/header.component.sass
@@ -38,9 +38,9 @@ img
   border-radius: 50%
   color: $medium-gray
 .noti
-  cursor: pointer
+  cursor: not-allowed
   margin-right: 1.5rem
-  color: $medium-gray
+  color: $light-gray
 .logout
   cursor: pointer
   color: $medium-gray
