--- a/src/app/pages/home/home.component.sass
+++ b/src/app/pages/home/home.component.sass
@@ -30,7 +30,7 @@
       color: $primary
 .disabled
   color: $light-gray
-  cursor: default
+  cursor: not-allowed
   &:hover
     background-color: #ffffff00
     color: $light-gray
