--- a/src/app/pages/home/modules/activos/creacion-activo/creacion-activo.component.sass
+++ b/src/app/pages/home/modules/activos/creacion-activo/creacion-activo.component.sass
@@ -4,7 +4,7 @@
     background-color: white
     margin-top: 2vh
 .card_content
-    display: flex
+    display: flex !important
     flex-wrap: wrap
     width: 70%
     border: 0.5px solid $primary
