--- a/src/app/features/modal-detalle-activo/modal-detalle-activo.component.html
+++ b/src/app/features/modal-detalle-activo/modal-detalle-activo.component.html
@@ -1,4 +1,4 @@
-<div class="section__modal" *ngIf="!isLoading">
+<div class="section__modal">
 	<div class="title_modal">
 		<h2 class="title">{{ activo.description }}</h2>
 	</div>
