--- a/src/app/features/tabla-usuarios/tabla-usuarios.component.sass
+++ b/src/app/features/tabla-usuarios/tabla-usuarios.component.sass
@@ -6,6 +6,14 @@
     overflow: hidden
 table
     width: 100%
+.unselectable 
+    cursor: pointer
+    -webkit-touch-callout: none
+    -webkit-user-select: none
+    -khtml-user-select: none
+    -moz-user-select: none
+    -ms-user-select: none
+    user-select: none
 .paginator
     background-color: transparent
     margin-bottom: -2%
