--- a/src/app/pages/home/modules/activos/creacion-activo/creacion-activo.component.html
+++ b/src/app/pages/home/modules/activos/creacion-activo/creacion-activo.component.html
@@ -42,6 +42,7 @@
 					<mat-form-field appearance="outline" style="width: 15%; min-width: 150px;">
 						<mat-label>Cantidad a emitir</mat-label>
 						<input matInput type="number" placeholder="Cantidad a emitir" formControlName="initialAmount" required />
+						<mat-hint align="start"><strong>(Sin decimales)</strong> </mat-hint>
 					</mat-form-field>
 
 					<mat-form-field appearance="outline" style="width: 25%; min-width: 200px;">
